# DofusAutoTravel

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: actions.py  clipboard_monitor.py  gui.py  main.py  window_manager.py
src/autotravel/: clipboard_monitor.py  gui.py
