[tool.poetry]
name = "autotravel"
version = "0.1.0"
description = "Simple detection of /travel commands in "
authors = ["Ozerioss <ozerioss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyautogui = "^0.9.54"
pyperclip = "^1.9.0"
pynput = "^1.7.7"
pywin32 = "^308"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"


[tool.black]
line-length = 111

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
